@@ -1,5 +1,5 @@
 /*
- *    Copyright 2012-2022 the original author or authors.
+ *    Copyright 2012-2026 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -42,7 +42,7 @@ final class ConnectionFactorySetter extends AbstractPropertySetter<ConnectionFac
       throw new IllegalArgumentException(
           "Class '" + clazz.getName() + "' is not a valid '" + ConnectionFactory.class.getName() + "' implementation");
     }
-    return (ConnectionFactory) clazz.newInstance();
+    return (ConnectionFactory) clazz.getDeclaredConstructor().newInstance();
   }
 
 }
